Fix background color hsl for scrollbar

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -665,7 +665,16 @@ img {
   }
 }
 /*=============== SCROLL BAR ===============*/
-
+::-wedkit-scrollbar {
+  width: .6rem;
+  background-color: hsl(220, 6%, 80%);
+}
+::-wedkit-scrollbar-thumb {
+  background-color: hsl(220, 6%, 60%);
+}
+::-wedkit-scrollbar-thumb:hover {
+  background-color: hsl(220, 6%, 50%);
+}
 /*=============== SCROLL UP ===============*/
 
 /* Show Scroll Up */
